--- a/static/styles.css
+++ b/static/styles.css
@@ -2,34 +2,54 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
+
 .flex-column {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
+
 .flex-start {
-  justify-content: flex-start; }
+  justify-content: flex-start;
+}
+
 .flex-around {
-  justify-content: space-around; }
+  justify-content: space-around;
+}
+
 img.img-s {
   width: 100px;
-  height: 100px; }
+  height: 100px;
+}
+
 img.img-m {
   width: 200px;
-  height: 200px; }
+  height: 200px;
+}
+
 img.rounded {
-  border-radius: 50%; }
+  border-radius: 50%;
+}
+
 img.half-rounded {
-  border-radius: 50% 50% 0 0; }
+  border-radius: 50% 50% 0 0;
+}
+
 img.img-l {
   width: 300px;
-  height: 300px; }
+  height: 300px;
+}
+
 .text-overflow {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+}
+
 .characterContainer {
   overflow: hidden;
   display: flex;
@@ -37,19 +57,179 @@ img.img-l {
   align-items: center;
   margin: 0px;
   padding: 10px;
-  width: 250px; }
+  width: 250px;
+}
+
 .characterContainer:hover {
   background-color: #f9f9f9;
   border-radius: 10px;
   cursor: pointer;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
 .mainTitle {
   text-align: center;
   font-size: 2em;
   margin: 20px;
-  color:rgb(57, 57, 57); }
+  color: rgb(57, 57, 57);
+}
+
 body {
-  background-color: #f2f2f2;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px; }
+  font-family: 'Roboto', sans-serif;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  height: 100vh;
+  background-color: #f3f4f6;
+
+  h1 {
+    color: #6b7280;
+    text-align: center;
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  align-items: center;
+  border: 2px solid #6b7280;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+
+  .searchbar {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 80%;
+
+
+    input {
+      padding: 0.5rem;
+      border: 1px solid #6b7280;
+      border-radius: 0.25rem;
+      width: 60%;
+
+      :focus {
+        outline: none;
+        border-color: #6b7280;
+        box-shadow: 0 0 5px rgba(107, 114, 128, 0.5);
+      }
+    }
+
+    button {
+      width: 10%;
+      background-color: #6b7280;
+      color: white;
+      border: none;
+      padding: 0.5rem;
+      border-radius: 0.25rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: #4b5563;
+      }
+    }
+  }
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  align-items: center;
+  font-weight: bold;
+}
+
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background-color: #6b7280;
+  color: white;
+  padding: 1rem;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+
+  a {
+    color: white;
+    text-decoration: none;
+    margin: 0 1rem;
+  }
+}
+
+.addform {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.5rem;
+  margin: 2rem auto;
+  padding: 1rem;
+  max-width: 30rem;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  form {
+    display: grid;
+    grid-template-columns: 100px auto;
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 2rem;
+
+    label {
+      font-size: 1.125rem;
+    }
+
+    input {
+      padding: 0.5rem;
+      font-size: 1.125rem;
+      border: 1px solid #e5e7eb;
+      border-radius: 0.5rem;
+
+      :focus {
+        outline: none;
+        border-color: #6b7280;
+      }
+
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      font-size: 1.125rem;
+      background-color: #6b7280;
+      color: #fff;
+      border: none;
+      border-radius: 0;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        background-color: #adb2ba;
+      }
+    }
+
+    button.reset {
+      background-color: #ff7e67;
+
+      &:hover {
+        background-color: #ff4e33;
+      }
+    }
+  }
+}
